[gd_scene load_steps=4 format=3 uid="uid://ckw7a8awnupcm"]

[ext_resource type="Script" path="res://screens/game_screen/terrain_grid/terrain_grid_input_manager/terrain_grid_input_manager.gd" id="1_ujn8q"]
[ext_resource type="PackedScene" uid="uid://cvxpu3e3wl11t" path="res://screens/game_screen/terrain_grid/terrain_grid.tscn" id="2_fv02x"]
[ext_resource type="Script" path="res://screens/game_screen/terrain_grid/terrain_grid_controller.gd" id="3_2b1js"]

[node name="TerrainGridInputManager" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ujn8q")

[node name="TerrainGrid" parent="." instance=ExtResource("2_fv02x")]
layout_mode = 0

[node name="TerrainGridController" type="Node" parent="."]
script = ExtResource("3_2b1js")
